feat(ui,api): workflow v3 preview

--- a/ui/src/assets/i18n/en.json
+++ b/ui/src/assets/i18n/en.json
@@ -319,6 +319,10 @@
   "common_deleted": "Deleted with success",
   "common_click_more_informations": "Click here for more information.",
   "common_informations": "Informations",
+  "common_logs": "Logs",
+  "common_problems": "Problems",
+  "common_infos": "Infos",
+  "common_results": "Results",
   "coverage_branches_title": "Covered branches: ",
   "coverage_functions_title": "Covered functions: ",
   "coverage_lines_title": "Covered lines: ",
