fix(ui): typo in pipeline wizard
Signed-off-by: Antoine Guerrée <antoine.guerree+github@corp.ovh.com>

--- a/ui/src/assets/i18n/en.json
+++ b/ui/src/assets/i18n/en.json
@@ -528,7 +528,7 @@
   "pipeline_stage_edit": "Edit stage",
   "pipeline_stage_moved": "Stage moved",
   "pipeline_stage_no": "The pipeline has no stage",
-  "pipeline_wizard_description": "Create or select your first pipeline for you workflow",
+  "pipeline_wizard_description": "Create or select your first pipeline for your workflow",
   "project_list": "All projects",
   "project_description": "Project description",
   "project_icon": "Project icon",
