--- a/ui/src/assets/i18n/en.json
+++ b/ui/src/assets/i18n/en.json
@@ -625,7 +625,7 @@
   "settings_tips": "Tips",
   "services": "services",
   "services_list": "CDS Services",
-  "service_view_details": "Voir les details",
+  "service_view_details": "See details",
   "service_alert": "Status Alert - please check status below",
   "service_warning": "Status Warning - please check status below",
   "service_ok": "Status OK - All is fine",
