refactor(ui): remove some semantic (#6334)

--- a/ui/src/assets/i18n/en.json
+++ b/ui/src/assets/i18n/en.json
@@ -6,7 +6,6 @@
   "auth_message_init_token": "If you just generated the CDS configuration you can give an optional init token.",
   "auth_message_command": "Command",
   "auth_message_copy": "You can now copy this command to your terminal to finish login then close this tab.",
-  "auth_message_copy_signin_token": "You can now use this token to signin with the consumer.",
   "auth_callback_missing_param": "One or more params are missing to continue. You can try to sign in again.",
   "auth_callback_error": "A error occurred. You can try to sign in again.",
   "auth_ask_reset_success": "Reset request send, if a CDS account match given email address you will receive a link to reset your password.",
@@ -134,7 +133,7 @@
   "common_no_pipeline": "There is no pipeline linked",
   "common_no_application": "There is no application linked",
   "common_no_workflow": "There is no workflow linked",
-  "common_copy_clipboard": "Copy to clipboad",
+  "common_copy_clipboard": "Copy to clipboard",
   "common_select": "Select",
   "common_create": "Create",
   "common_show_all": "Show all",
@@ -201,7 +200,6 @@
   "group_deleted": "Group deleted",
   "group_name": "Group name",
   "group_list_title": "Groups",
-  "group_load_group": "Loading group...",
   "group_saved": "Group saved",
   "group_add_user_saved": "Member added",
   "group_add_admin_saved": "Admin added",
@@ -352,7 +350,6 @@
   "step_add_job": "Add job",
   "timeline_loading": "Loading timeline...",
   "timeline_no": "Timeline is empty",
-  "timeline_title": "Timeline",
   "timeline_filter_mute": "Mute events on this workflow",
   "timeline_filter_project": "Mute events on: ",
   "timeline_filter_updated": "Filter updated",
